force-app/main/default/objects/Recipe_Step__c/Recipe_Step__c.object-meta.xml
<CustomObject>
    <description>A set of actions taken on one/many ingredients in sequence in order to prepare a recipe</description>
    <label>Recipe Step</label>
    <nameField>
        <displayFormat>STEP-{00000}</displayFormat>
        <label>Recipe Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipe Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>