force-app/main/default/objects/Recipe_Step__c/fields/Step_Order__c.field-meta.xml
<CustomField>
    <fullName>Step_Order__c</fullName>
    <description>Order of this step in the recipe (controlled by user entry and apex trigger)</description>
    <inlineHelpText>Order of this step in the recipe (controlled by user entry and apex trigger)</inlineHelpText>
    <label>Step Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>