force-app/main/default/objects/Recipe_Step__c/fields/Step_Summary__c.field-meta.xml
<CustomField>
    <fullName>Step_Summary__c</fullName>
    <description>Summary of Recipe Step</description>
    <inlineHelpText>Summary of Recipe Step</inlineHelpText>
    <label>Step Summary</label>
    <type>TextArea</type>
</CustomField>